# shapeshifter

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
apps/shapeshifter-desktop/: Cargo.toml
apps/shapeshifter-desktop/src/: app.rs  main.rs  self_check.rs  state.rs  views.rs
apps/shapeshifter-tui/: Cargo.toml
apps/shapeshifter-tui/src/: app.rs  main.rs  ui.rs  updater.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: lib.rs  store.rs  types.rs
crates/codex-auth/: Cargo.toml
crates/codex-auth/src/: errors.rs  lib.rs  pkce.rs  service.rs
crates/codex-auth/tests/: browser_prompt.rs
crates/codex-limits/: Cargo.toml
crates/codex-limits/src/: client.rs  lib.rs  mapper.rs  models.rs
crates/codex-limits/tests/: usage_mapping.rs
crates/domain/: Cargo.toml
crates/domain/src/: account_profile.rs  auth_file.rs  host.rs  lib.rs  limits.rs
crates/host-ops/: Cargo.toml
crates/host-ops/src/: lib.rs  operator.rs
crates/host-ops/tests/: local_roundtrip.rs
crates/profile-store/: Cargo.toml
crates/profile-store/src/: lib.rs  store.rs
crates/profile-store/tests/: profile_store_tests.rs
crates/ui-components/: Cargo.toml
crates/ui-components/src/: account_card.rs  host_card.rs  lib.rs  limits_card.rs
