[package]
name = "codex-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
domain = { path = "../domain" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
urlencoding = "2.1"
uuid.workspace = true
webbrowser.workspace = true
